fixes a lot of bibliography stuff

--- a/intro.tex
+++ b/intro.tex
@@ -19,7 +19,7 @@ of channels where data can leak grows even more. Unfortunately,
 many times, these data leakages happen because web services
 lack practical, secure mechanisms to protect user data. 
 
-Many systems~\cite{mylar, popa:cryptdb, opaque} 
+Many systems~\cite{popa:mylar, popa:cryptdb, opaque} 
 have been built to prevent
 data leakage from the server, but
 the focus of this dissertation is on systems
