--- a/n-conf.bib
+++ b/n-conf.bib
@@ -493,6 +493,15 @@
   address	= {Seattle, WA},
 }
 
+@Proceedings{NSDI15,
+	title		= POT # { 12th } # NSDI,
+	booktitle	= POT # { 12th } # NSDI,
+	month		= may,
+	year		= 2015,
+	address	= {Oakland, CA},
+}
+
+
 @Proceedings{NSDI16,
   title		= POT # { 13th } # NSDI,
   booktitle	= POT # { 13th } # NSDI,
@@ -501,6 +510,14 @@
   address	= {Santa Clara, CA},
 }
 
+
+@Proceedings{NSDI17,
+	title		= POT # { 14th } # NSDI,
+	booktitle	= POT # { 14th } # NSDI,
+	month		= mar,
+	year		= 2017,
+	address	= {Boston, MA},
+}
 
 @Proceedings{PLDI90,
     title       = POT # { 1990 } # PLDI,
@@ -979,6 +996,14 @@
     address	= {Fairfax, VA},
 }
 
+@Proceedings{CCS00,
+	title	= POT # { 7th } # CCS,
+	booktitle	= POT # { 7th } # CCS,
+	month	= nov,
+	year	= 2000,
+	address	= {Athens, Greece},
+}
+
 @Proceedings{CCS02,
     title	= POT # { 9th } # CCS,
     booktitle	= POT # { 9th } # CCS,
@@ -986,6 +1011,7 @@
     year	= 2002,
     address	= {Washington, DC},
 }
+
 
 @Proceedings{CCS03,
     title	= POT # { 10th } # CCS,
@@ -2038,6 +2064,15 @@
     year	= 2011,
     address	= {Toronto, Canada},
 }
+
+@Proceedings{SIGCOMM13,
+	title	= POT # { 2013 } # SIGCOMM,
+	booktitle	= POT # { 2013 } # SIGCOMM,
+	month	= aug,
+	year	= 2013,
+	address	= {Hong Kong, China},
+}
+
 
 @Proceedings{SIGCOMM15,
     title	= POT # { 2015 } # SIGCOMM,
