--- a/p.bib
+++ b/p.bib
@@ -6,15 +6,13 @@
 @inproceedings{polaris,
   title={Polaris: Faster Page Loads Using Fine-grained Dependency Tracking.},
   author={Netravali, Ravi and Goyal, Ameesh and Mickens, James and Balakrishnan, Hari},
-  booktitle={NSDI},
-  pages={123--136},
-  year={2016}
+  crossref = {NSDI16},
 }
 
 @inproceedings{flywheel,
   title={Flywheel: Google's Data Compression Proxy for the Mobile Web.},
   author={Agababov, Victor and Buettner, Michael and Chudnovsky, Victor and Cogan, Mark and Greenstein, Ben and McDaniel, Shane and Piatek, Michael and Scott, Colin and Welsh, Matt and Yin, Bolian},
-  booktitle={NSDI},
+  crossref={NSDI15},
   volume={15},
   pages={367--380},
   year={2015}
@@ -23,9 +21,7 @@
 @inproceedings{opaque,
   title={Opaque: An Oblivious and Encrypted Distributed Analytics Platform.},
   author={Zheng, Wenting and Dave, Ankur and Beekman, Jethro G and Popa, Raluca Ada and Gonzalez, Joseph E and Stoica, Ion},
-  booktitle={NSDI},
-  pages={283--298},
-  year={2017}
+  crossref = {NSDI17},
 }
 
 @Misc{amazon-disc-pricing,
@@ -1191,10 +1187,7 @@
 @InProceedings{mugshot,
 	author = {J. Mickens and J. Elson and J. Howell},
 	title = {{Mugshot: Deterministic Capture and Replay for JavaScript Applications}},
-	booktitle = {Proceedings of NSDI},
-	month = {April},
-	year = {2010},
-	location = {San Jose, CA}
+	crossref = {NSDI10},
 }
 
 @InProceedings{jigsaw,
@@ -1229,38 +1222,25 @@
 @inproceedings{gentleaggression,
 	author = {T. Flach and N. Dukkipati and A. Terzis and B. Raghavan and N. Cardwell and Y. Cheng and A. Jain and S. Hao and E. Katz-Bassett and R. Govindan},
 	title = {Reducing {W}eb {L}atency: {T}he {V}irtue of {G}entle {A}ggression},
-	booktitle = {Proceedings of SIGCOMM},
-	month = {August},
-	year = {2013},
-	location = {Hong Kong, China},
+	crossref = {SIGCOMM13},
 }
 
 @InProceedings{treehouse,
 	author = {L. Ingram and M. Walfish},
 	title = {{TreeHouse: JavaScript Sandboxes to Help Web Developers Help Themselves}},
-	booktitle = {Proceedings of USENIX ATC},
-	address = {Boston, MA},
-	month = {June},
-	year = {2012},
-	pages = {},
+	crossref = {USENIX12},
 }
 
 @InProceedings{chow05,
 	author = {J. Chow and B. Pfaff and Tal Garfinkel and M. Rosenblum},
 	title = {{Shredding Your Garbage: Reducing Data Lifetime Through Secure Deallocation}},
-	booktitle = {Proceedings of USENIX Security},
-	address = {Baltimore, MD},
-	month = {August},
-	year = {2005}
+	crossref = {USEC05}
 }
 
 @InProceedings{tor,
 	author = {R. Dingledine and N. Mathewson and P. Syverson},
 	title = {{Tor: The Second-Generation Onion Router}},
-	booktitle = {Proceedings of USENIX Security},
-	address = {San Diego, CA},
-	month = {August},
-	year = {2004}
+	crossref = {USEC04},
 }
 
 @misc{secureDrop,
@@ -1489,18 +1469,14 @@
 @InProceedings{psj,
 	author = {D. Akhawe and P. Saxena and D. Song},
 	title = {{Privilege Separation in HTML5 Applications}},
-	booktitle = {Proceedings of USENIX Security},
-	address = {Bellevue, WA},
-	month = {August},
-	year = {2012},
-	pages = {},
+	crossref = {USEC12}
 }
 
 % https://www.usenix.org/legacy/events/sec10/tech/full_papers/Aggarwal.pdf
 @InProceedings{aggarwal10,
 	author = {G. Aggarwal and E. Burzstein and C. Jackson and D. Boneh},
 	title = {{An Analysis of Private Browsing Modes in Modern Browsers}},
-	booktitle = {Proceedings of USENIX Security},
+	crossref = {USEC10},
 	address = {Washington, DC},
 	month = {August},
 	year = {2010},
@@ -1576,10 +1552,7 @@
 @InProceedings{blaze93,
 	author = {M. Blaze},
 	title = {{A Cryptographic File System for Unix}},
-	booktitle = {Proceedings of CCS},
-	address = {Fairfax, VA},
-	month = {November},
-	year = {1993}
+	crossref = {CCS93}
 }
 
 @InProceedings{provos00,
@@ -1611,10 +1584,7 @@
 @InProceedings{timingAttacks,
 	author = {E. Felten and M. Schneider},
 	title = {{Timing Attacks on Web Privacy}},
-	booktitle = {Proceedings of CCS},
-	address = {Athens, Greece},
-	month = {November},
-	year = {2000}
+	crossref = {CCS00},
 }
 
 % http://crypto.stanford.edu/~dabo/papers/webtiming.pdf
@@ -1696,10 +1666,7 @@
 @InProceedings{lacuna,
 	author = {A. Dunn and M. Lee and S. Jana and S. Kim and M. Silberstein and Y. Xu and V. Shmatikov and E. Witchel},
 	title = {{Eternal Sunshine of the Spotless Machine: Protecting Privacy with Ephemeral Channels}},
-	booktitle = {Proceedings of OSDI},
-	address = {Vancouver, BC, Canada},
-	month = {November},
-	year = {2010},
+	crossref = {OSDI10},
 }
 
 @Misc{domStorage,
@@ -1790,28 +1757,13 @@
 @InProceedings{cleanOS,
 	author = {Yang Tang and Phillip Ames and Sravan Bhamidipati and Ashish Bijlani and Roxana Geambasu and Nikhil Sarda},
 	title = {{CleanOS: Limiting Mobile Data Exposure with Idle Eviction}},
-	booktitle = {Proceedings of OSDI},
-	address = {Hollywood, CA},
-	month = {October},
-	year = {2012},
-}
-
-@InProceedings{mylar,
-	author = {Raluca Ada Popa and Emily Stark and Jonas Helfer and Steven Valdez and Nickolai Zeldovich and M. Frans Kaashoek and Hari Balakrishnan},
-	title = {{Building web applications on top of encrypted data using Mylar}},
-	booktitle = {Proceedings of NSDI},
-	address = {Seattle, WA},
-	month = {April},
-	year = {2014},
+	crossref = {OSDI12},
 }
 
 @InProceedings{zozzle,
 	author = {C. Curtsinger and B. Livshits and B. Zorn and C. Seifert},
 	title = {{Zozzle: Fast and Precise In-Browser JavaScript Malware Detection}},
-	booktitle = {Proceedings of USENIX Security},
-	address = {San Francisco, CA},
-	month = {August},
-	year = {2011}
+	crossref = {USEC11},
 }
 
 @InProceedings{lowet09,
