adds some information on break even points for using Splinter

--- a/concl.tex
+++ b/concl.tex
@@ -20,7 +20,7 @@ Splinter leveraged
 function secret sharing (FSS) to reduce the overhead associated with private queries compared to previous
 work. However, open research problems still remain. For example, can private queries scale to billions
 or trillions of records? Furthermore, can private queries support more expressive operators like JOINs or
-NOT conditions? 
+NOT conditions? What are the limitations on the types of FSS can support practically?
 
 Multi-party computation (MPC) allows participants to evaluate a common function without revealing
 their respective inputs. As hospitals, governments, and corporations increasingly transition from
