starts some acks and adds bandwidth comparison results

--- a/acks.tex
+++ b/acks.tex
@@ -6,6 +6,13 @@ More acknowledgments here.
 
 %This research was supported in part by NSF awards CNS-1053143 and
 %CCF-1253229, and by the CSAIL cybersecurity initiative.
+
+This work was
+partially supported by an NSF Graduate Research Fellowship
+(Grant No. 2013135952) and by NSF awards
+CNS-1053143, CNS-1413920, CNS-1350619, 
+and CNS-1414119. \\
+
 The dissertation incorporates and extends work published
 in the following papers:
 
@@ -16,7 +23,7 @@ in the following papers:
   \newblock In \emph{Proceedings of Network and Distributed System Security Symposium (\mbox{NDSS})},
   2018.
   
-   Frank Wang, Catherine Yun, Shafi Goldwasser, Vinod Vaikuntanathan, and Matei Zaharia.
+  Frank Wang, Catherine Yun, Shafi Goldwasser, Vinod Vaikuntanathan, and Matei Zaharia.
   \newblock Splinter: Practical Private Queries on Public Data.
   \newblock In \emph{Proceedings of Networked Systems Design
   	and Implementation (\mbox{NSDI})}, 2017.
