--- a/splinter.tex
+++ b/splinter.tex
@@ -21,7 +21,7 @@ travel sites have also increased prices for certain frequently searched flights~
 Even when the services are honest, server compromise and subpoenas can leak the sensitive user
 information collected by these services~\cite{ravichandran2009capturing, yelp-compromise, twitter-compromise}.
 
-This paper presents Splinter, a system that protects users' queries to web applications
+This dissertation presents Splinter, a system that protects users' queries to web applications
 while achieving practical performance for many current web applications.
 In Splinter, the user divides each query into shares and sends them to different
 \emph{providers}, which are services hosting a copy of the dataset (Figure~\ref{fig:overview}).
@@ -116,7 +116,7 @@ data to be hosted on these providers.
 %map, point-of-interest, and traffic data. 
 For a given user query, all the providers have to run it on the same
 view of the data. Maintaining data consistency
-from mirror sites is beyond the scope of this paper, but
+from mirror sites is beyond the scope of this dissertation, but
 standard techniques can be used~\cite{tewari2002wcdp,chi2008novel}.
 
 As shown in Figure~\ref{fig:overview}, 
@@ -1275,7 +1275,7 @@ and does not describe how to handle more servers.
 \footnote{From our understanding, it is possible for Olumofin et al. to support
 	more than two parties, but server-side computation and bandwidth would increase
 	substantially, eliminating effects of the optimizations described in the 
-	paper.}
+	dissertation.}
 In particular, we compare Olumofin et al. and Splinter on
 the following three metrics: number of  
 round trips, bandwidth, and server-side computation. 
@@ -1589,7 +1589,7 @@ databases consistency across multiple providers~\cite{spanner, ongaro:raft, tu:s
 Using the appropriate consistency techniques is dependent
 on the application and an active area of research.
 Applying those techniques in Splinter is beyond the scope
-of this paper.
+of this dissertation.
 
 
 \subsection{Related Work}
