--- a/veil.tex
+++ b/veil.tex
@@ -59,7 +59,7 @@ have no way to determine which state in the session is
 actually sensitive, and which state can be safely
 exposed to the swap device.
 
-In this paper, we introduce Veil, a system
+In this dissertation, we introduce Veil, a system
 that allows web developers to implement
 private browsing semantics for their own pages.
 For example, the developers of a whisteblowing
@@ -259,7 +259,7 @@ attacker has access to the machine \emph{during} a
 private session, the attacker can directly extract
 sensitive data, e.g., via keystroke logging or by
 causing the browser to core dump; such exploits are
-out-of-scope for this paper.
+out-of-scope for this dissertation.
 
 Veil models the post-session attacker as a skilled
 system administrator who knows the location and purpose
@@ -344,7 +344,7 @@ is never swapped to persistent storage.
 %the browser vendor.
 Poorly-written or malicious browser extensions that leak
 sensitive page data~\cite{lerner13} are also outside the
-scope of this paper.
+scope of this dissertation.
 
 \subsection{Design}
 \label{sec:design}
@@ -602,7 +602,7 @@ altruistic individuals (as in Tor~\cite{tor}),
 or by a large set of privacy-preserving
 sites who will collaboratively pay for the cloud
 VMs that run the blinding servers. Throughout the
-paper, we refer to a single blinding service
+dissertation, we refer to a single blinding service
 \texttt{veil.io} for convenience.
 However, independent entities can simultaneously
 run independent blinding services.
