--- a/splinter.tex
+++ b/splinter.tex
@@ -1482,7 +1482,7 @@ a provider cannot aggregate locally for SUM and COUNT queries in the multi-party
 %We can perform 250 FSS evaluations a second, but this lower performance 
 %is useful for SUM and COUNT operations on bandwidth-constrained clients.
 
-\subsection{Hosting Costs}
+\subsubsection{Hosting Costs}
 \label{sec:pricing}
 We estimate Splinter's server-side computation cost on Amazon EC2, 
 where the cost of a CPU-second using Amazon Lambda is about 0.005 cents. 
