making some edits recommended by james

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,16 +1,25 @@
-Web services, like Google, Facebook, and Dropbox, 
-are a regular part of users' lives. 
-As a form of payment, these services
-collect, store, and analyze user data.
-Even accessing these web services can leak a substantial
-amount of data. 
+Web services like Google, Facebook, and Dropbox 
+are a regular part of users' lives. However,
+using these applications can cause sensitive data
+leakage both on the server and client.
+On the server-side, applications collect and analyze
+sensitive user data to monetize it. Consequently,
+this sensitive data can leak through data breaches
+or accessed by malicious database administrators. 
+On the client, when a user accesses a web service
+through the browser, sensitive user information
+may leak outside of the browser, 
+e.g., to DNS interfaces or the swap space.
+As a result, an attacker who accesses the user
+device after a session has terminated can view
+this information.
 
 This dissertation presents two practical,
 secure systems, Veil and Splinter, that
 prevents some of this data leakage. Veil minimizes
 client-side information leakage from the browser by allowing
 web page developers to enforce stronger private browsing 
-semantics without browser support. Splinter protects
-sensitive information present in a users' query on cleartext datasets
-in a practical manner by leveraging a recent cryptographic
-primitive, Function Secret Sharing (FSS).
+semantics without browser support. Splinter 
+allows the server to properly respond to a user
+query without the server learning any sensitive
+information present in the query.
