--- a/title.tex
+++ b/title.tex
@@ -1,6 +1,6 @@
 % -*- TeX-master: "paper.tex"; TeX-PDF-mode: t -*-
 
-\title{Preventing Data Leakage during Web Service Accesses}
+\title{Preventing Data Leakage in Web Services}
 \author{Frank Yi-Fei Wang}
 \prevdegrees{
   B.S., Stanford University (2012) \\
