--- a/intro.tex
+++ b/intro.tex
@@ -1,30 +1,32 @@
 \section{Introduction}
 \label{chap:intro}
 
-This dissertation presents two practical, secure
-systems, Veil and Splinter, which protect against
-certain data leakage that happens when a user
-accesses a web service. The rest of this
-chapter will motivate this problem and 
-briefly describe Veil and Splinter.
-
 \subsection{Motivation}
 Consumers are increasing their usage of web services. Whenever
 users interact with these applications, the web service collects
-user data both directly and indirectly. This data can contain sensitive 
-information about a user, such as their behavior, personal facts,
-and location. These data leaks are happening with even greater
-frequency and as web systems have become more complex, the number
-of channels where data can leak grows even more. Unfortunately,
-many times, these data leakages happen because web services
-lack practical, secure mechanisms to protect user data. 
+their data, which can contain sensitive 
+information, such as their medical conditions,
+political preferences, and income~\cite{narayanan2010myths, narayanan2008robust}.
+Unfortunately, this data can 
+leak through numerous channels on both the server
+and client. As web systems become more complex, the 
+number of these channels continues to grow. More specifically,
+on the server side, data can leak through data breaches
+or malicious service administrators. Similarly, on the client side,
+sensitive user information can leak from the browser whenever
+a user accesses a web application. How do we build secure
+mechanisms to prevent this data leakage?
 
-Many systems~\cite{popa:mylar, popa:cryptdb, opaque} 
-have been built to prevent
-data leakage from the server, but
-the focus of this dissertation is on systems
-that minimize data leakage on the client (Veil), specifically
-the browser, and that protect user in queries (Splinter).
+Many systems~\cite{popa:mylar, popa:cryptdb, li:sundr, feldman:sporc} 
+have focused on protecting sensitive user data stored
+in web application databases 
+from leaking as a result of data breaches or malicious 
+database administrators. However, the focus of
+this dissertation is different. We are not protecting sensitive 
+user data that already exists on the server.
+Instead, we build systems
+that prevent data leakage on the client (Veil), specifically
+from the browser, and that protect sensitive user data in queries (Splinter).
 In the section below, we provide an overview of Veil and Splinter.
 
 \subsection{Our Systems}
@@ -81,7 +83,7 @@ Many online services let users query datasets such as maps, flight prices, paten
 and medical information. The datasets themselves do not contain sensitive user information,
 but unfortunately, users' queries on these datasets reveal highly
 sensitive information that can compromise users' privacy. 
-This paper presents Splinter, a system that protects users' queries and
+This dissertation presents Splinter, a system that protects users' queries and
 scales to realistic applications.
 A user splits her query into multiple parts and sends each part 
 to a different provider that holds a copy of the data.
@@ -92,8 +94,8 @@ We develop protocols extending FSS to new types of queries, such as MAX and TOPK
 We also provide an optimized implementation of FSS using AES-NI instructions and multicores.
 Splinter achieves end-to-end latencies below 1.6 seconds for realistic workloads including a Yelp clone, flight search, and map routing.
 
-\subsubsection{Dissertation Roadmap}
-
-The dissertation will be organization like the following: 
-Chapter~\ref{chap:veil} and Chapter~\ref{chap:splinter} will motivate and describe Veil
-and Splinter respectively. Chapter~\ref{chap:concl} will describe future work.
+%\subsubsection{Dissertation Roadmap}
+%
+%The dissertation will be organization like the following: 
+%Chapter~\ref{chap:veil} and Chapter~\ref{chap:splinter} will motivate and describe Veil
+%and Splinter respectively. Chapter~\ref{chap:concl} will describe future work.
